--- a/finalproject/site/css/main.css
+++ b/finalproject/site/css/main.css
@@ -12,8 +12,25 @@
 
 html {
     color: #222;
-    font-size: 1em;
+    font-size: 16px;
     line-height: 1.4;
+    box-sizing: border-box
+}
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+    /* REMOVE THIS */
+    border: 1px solid #ccc;
+}
+.clearfix:after {
+    display: block;
+    height: 0;
+    clear: both;
+    line-height: 0;
+    content: ".";
+
+    visibility: hidden;
 }
 
 /*
@@ -94,30 +111,73 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/* TYPOGRAPHY */
+h1 {
+    font-family: 'Monoton', cursive;
+    margin: 0 0 10px 0;
+    font-size: 3rem;
+}
+h2 {
+    font-family: 'Contrail One', cursive;
+    margin: 0 0 10px 0;
+    font-size: 1.75rem;
+}
+h3 {
+    font-family: 'Passion One', cursive;
+    margin: 0 0 10px 0;
+    font-size: 1.25rem;
+}
+h4,
+h5,
+h6 {
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    margin: 0 0 10px 0;
+    font-size: 1rem;
+}
+p{
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    font-size: 1rem;
+    line-height: 22px;
+    margin: 0 0 10px 0;
+}
+p:last-child{
+    margin-bottom: 0;
+}
 
 /* HOME VIEW */
 
 .page {
-
+    padding: 20px;
+    max-width: 960px;
+    margin: 0 auto;
 }
 
 .homecontainer {
+    text-align: center;
 
 }
+
 .mainlogo {
-
+    text-align: center;
 }
+
 .imgbig {
 
 }
 
 .btncontainer {
-
+    width: 33.33%;
+    text-align: center;
 }
 .loginbtn {
-
+    text-align: center;
+    float: left;
 }
 .signupbtn {
+    text-align: center;
+    float: right;
 
 }
 
@@ -125,7 +185,8 @@ textarea {
 /* LOGIN MENU DROPS DOWN ON CLICK OF .loginbtn */
 
 .logincontainer {
-
+    width: 33.33%;
+    text-align: center;
 }
 .login {
 
@@ -134,23 +195,28 @@ textarea {
 
 }
 .submitbtn {
-
+    text-align: center;
 }
 
 
 /* USER TYPE MENU DROPS DOWN ON CLICK OF .signupbtn */
 
 .user-type-container {
-
+    width: 33.33%;
 }
+
 .usertypebtn {
 
 }
+
 #musician {
-
+    text-align: center;
+    float: left;
 }
-#band {
 
+#band {
+    text-align: center;
+    float: right;
 }
 
 
@@ -164,7 +230,8 @@ textarea {
 
 }
 .column1 {
-
+    float: left;
+    width: 50%;
 }
 .signuptextsm {
 
@@ -174,7 +241,8 @@ textarea {
 }
 
 .column2 {
-
+    float: right;
+    width: 50%;
 }
 
 
