--- a/finalproject/site/css/main.css
+++ b/finalproject/site/css/main.css
@@ -171,7 +171,7 @@ p:last-child{
 
 .btncontainer {
     width: 33.33%;
-    text-align: center;
+    position: relative;
 }
 .loginbtn {
     text-align: center;
