Before the SCSS...

--- a/finalproject/site/css/main.css
+++ b/finalproject/site/css/main.css
@@ -1,481 +1,1 @@
-/*! HTML5 Boilerplate v5.0.0 | MIT License | http://h5bp.com/ */
-
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-    color: #242423;
-    font-size: 16px;
-    line-height: 1.4;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-    box-sizing: inherit;
-    /* REMOVE THIS */
-    border: 1px solid #ccc;
-}
-.clearfix:after {
-    display: block;
-    height: 0;
-    clear: both;
-    line-height: 0;
-    content: ".";
-
-    visibility: hidden;
-}
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
-}
-
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-/* TYPOGRAPHY */
-h1 {
-    font-family: 'Monoton', cursive;
-    margin: 0 0 10px 0;
-    font-size: 3rem;
-}
-h2 {
-    font-family: 'Contrail One', cursive;
-    margin: 0 0 10px 0;
-    font-size: 1.75rem;
-}
-h3 {
-    font-family: 'Passion One', cursive;
-    margin: 0 0 10px 0;
-    font-size: 1.25rem;
-}
-h4,
-h5,
-h6 {
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    margin: 0 0 10px 0;
-    font-size: 1rem;
-}
-p{
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: normal;
-    font-size: 1rem;
-    line-height: 22px;
-    margin: 0 0 10px 0;
-}
-p:last-child{
-    margin-bottom: 0;
-}
-
-/* MOBILE LAYOUT*/
-@media only screen and (min-width: 480px) {
-
-    /* HOME VIEW */
-    .page {
-        padding: 20px;
-        max-width: 940px;
-        margin: 0 auto;
-    }
-
-    .homecontainer-north {
-        width: 100%;
-        height: 75%;
-        background-color: black;
-        text-align: center;
-
-    }
-    .mainlogo {
-        text-align: center;
-    }
-    .imgbig {
-
-    }
-
-    .homecontainer-south {
-        width: 100%;
-        height: 25%;
-        background-color: white;
-        text-align: center;
-    }
-    .btncontainer {
-        width: 33.33%;
-        position: relative;
-    }
-    .loginbtn {
-        text-align: center;
-        float: left;
-    }
-    .signupbtn {
-        text-align: center;
-        float: right;
-
-    }
-
-
-    /* LOGIN MENU DROPS DOWN ON CLICK OF .loginbtn */
-    .login-signup-header {
-
-    }
-    .logincontainer {
-        width: 33.33%;
-        text-align: center;
-    }
-    .login {
-
-    }
-    #login-pwd {
-
-    }
-    .submitbtn {
-        text-align: center;
-    }
-
-
-    /* USER TYPE MENU DROPS DOWN ON CLICK OF .signupbtn */
-    .user-type-container {
-        width: 33.33%;
-    }
-
-    .usertypebtn {
-
-    }
-
-    #musician {
-        text-align: center;
-        float: left;
-    }
-
-    #band {
-        text-align: center;
-        float: right;
-    }
-
-
-    /* MUSICIAN SIGNUP FORM DROPS DOWN ON CLICK OF #musician */
-    .musiciancontainer {
-
-    }
-
-    .user-column-container {
-
-    }
-    .column1 {
-        float: left;
-        width: 50%;
-    }
-    .signuptextsm {
-
-    }
-    .dropdown {
-
-    }
-
-    .column2 {
-        float: right;
-        width: 50%;
-    }
-
-
-    /* BAND SIGNUP FORM DROPS DOWN ON CLICK OF #band */
-    .bandcontainer {
-
-    }
-
-
-    /* WIDER CONTAINER OF LARGER TEXT FIELDS DROPS DOWN ON CLICK OF ANY .usertypebtn */
-    .signup-bottom-container {
-
-    }
-    .signuptextlg {
-
-    }
-    .signuptextmed {
-
-    }
-    #signup-pwd {
-
-    }
-    #signup-pwd-conf {
-
-    }
-
-
-    /* BROWSE VIEW */
-
-    .browsecontainer {
-
-    }
-    .browse-column1 {
-
-    }
-    .infosmall1 {
-
-    }
-    .infosmall2 {
-
-    }
-
-    .browse-column2 {
-
-    }
-    .imgsmall {
-
-    }
-    .infosmall3 {
-
-    }
-    .infobig {
-        
-    }
-
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers:
- * http://juicystudio.com/article/screen-readers-display-none.php
- */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   http://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster:
-                                   http://www.sanbeiji.com/archives/953 */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+/*! normalize.css v3.0.2 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:0.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace, monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}/*! HTML5 Boilerplate v5.0.0 | MIT License | http://h5bp.com/ */html{color:#242423;font-size:16px;line-height:1.4;-webkit-font-smoothing:antialiased;box-sizing:border-box}a{text-decoration:none;color:#ffffff}li{list-style:none}*,*:before,*:after{box-sizing:inherit}.clearfix:after{display:block;height:0;clear:both;line-height:0;content:".";visibility:hidden}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}audio,canvas,iframe,img,svg,video{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.browserupgrade{margin:0.2em 0;background:#ccc;color:#000;padding:0.2em 0}h1{font-family:"Open Sans",Helvetica,Arial,sans-serif;font-weight:400;margin:0 0 10px 0;font-size:3rem;color:white}h2{font-family:"Open Sans",Helvetica,Arial,sans-serif;font-weight:300;margin:10px 0 10px 0;font-size:1.75rem;color:#908d8c;text-transform:uppercase}h3{font-family:'Open Sans', Helvetica, Arial, sans-serif;font-weight:200;margin:0 0 10px 0;font-size:1.25rem}h4,h5,h6{font-family:'Source Sans Pro', Helvetica, Arial, sans-serif;font-weight:400;margin:0 0 10px 0;font-size:1rem}p{font-family:'Source Sans Pro', Helvetica, Arial, sans-serif;font-weight:200;font-size:1rem;line-height:22px;margin:0 0 10px 0}p:last-child{margin-bottom:0}@media only screen and (max-width: 479px){.page{max-width:940px;margin:0 auto}.homecontainer-north{width:100%;height:500px;background-color:#33c0d4;text-align:center}.mainlogo{text-align:center;width:100%;padding:15px;background-color:#908d8c}.imgbig{height:250px;position:relative;top:75px}.homecontainer-south{width:100%;height:100px;background-color:white}.btncontainer{width:100%}.btn:active{background-color:#908d8c;color:white;border:3px solid white}.loginbtn{text-align:center;float:left;width:50%;border-right:.5px solid #908d8c}.signupbtn{text-align:center;float:left;width:50%}.login-signup-header{background-color:#33c0d4}.loginlogo{text-align:center;width:100%;padding:15px;position:relative;top:75px}.logincontainer{width:100%;height:500px;background-color:#33c0d4}.form{position:relative;top:120px;left:35px;width:600px;overflow:hidden}.form-column{width:50%;margin:0;float:left;padding:0 10px}.form-column .loginform-column{width:100%}.form-column li{margin:0 0 10px 0;padding:0;display:block;position:relative}.form-column li .parsley-errors-list{position:absolute;top:46px;left:0;z-index:1;background:#FD8A71;color:#ffffff;padding:0;margin:0;border-radius:10px;width:100%}.form-column li .parsley-errors-list li{margin:0;padding:10px}.form-column #pwdretrieve{font-family:'Source Sans Pro', Helvetica, Arial, sans-serif;font-weight:400;float:left;color:#d3d3d3;text-transform:uppercase;font-size:.75rem}.form label{display:none}.form input[type=text],.form textarea,.form input[type=submit],.form input[type=password]{height:50px}.form input[type=text],.form input[type=password],.form textarea{background:#d3d3d3;font-family:'Source Sans Pro', Helvetica, Arial, sans-serif;border:0;padding:6px 12px;color:black;width:100%;border-radius:0}.form input[type=text]:focus,.form textarea:focus,.form input[type=submit]{outline:none}.form textarea{resize:none;height:110px;display:block}.form input[type=submit]{background:#5DAD7F;border:0;padding:10px 20px;color:#ffffff;border-radius:10px;height:50px;width:100%}.submitbtn{text-align:center;background-color:white;color:#908d8c}.user-type-container{width:33.33%}#musician{text-align:center;float:left}#band{text-align:center;float:right}.column1{float:left;width:50%}.column2{float:right;width:50%}}.hidden{display:none !important;visibility:hidden}.visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.invisible{visibility:hidden}.clearfix:before,.clearfix:after{content:" ";display:table}.clearfix:after{clear:both}@media print{*,*:before,*:after{background:transparent !important;color:#000 !important;box-shadow:none !important;text-shadow:none !important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}a[href^="#"]:after,a[href^="javascript:"]:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}img{max-width:100% !important}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
