--- a/finalproject/site/scss/main.scss
+++ b/finalproject/site/scss/main.scss
@@ -1,6 +1,9 @@
 @import "normalize";
 $font1: 'Open Sans', Helvetica, Arial, sans-serif;
 $font2: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$darkGray: #908d8c;
+$lightGray: #d3d3d3;
+$seafoam: #33c0d4;
 
 
 /*! HTML5 Boilerplate v5.0.0 | MIT License | http://h5bp.com/ */
@@ -138,11 +141,11 @@ h2 {
     font-weight: 300;
     margin: 10px 0 10px 0;
     font-size: 1.75rem;
-    color: #908d8c;
+    color: $darkGray;
     text-transform: uppercase;
 }
 h3 {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: $font1;
     font-weight: 200;
     margin: 0 0 10px 0;
     font-size: 1.25rem;
@@ -150,13 +153,13 @@ h3 {
 h4,
 h5,
 h6 {
-    font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+    font-family: $font2;
     font-weight: 400;
     margin: 0 0 10px 0;
     font-size: 1rem;
 }
 p{
-    font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+    font-family: $font2;
     font-weight: 200;
     font-size: 1rem;
     line-height: 22px;
@@ -178,7 +181,7 @@ p:last-child{
     .homecontainer-north {
         width: 100%;
         height: 500px;
-        background-color: #33c0d4;
+        background-color: $seafoam;
         text-align: center;
 
     }
@@ -186,12 +189,15 @@ p:last-child{
         text-align: center;
         width: 100%;
         padding: 15px;
-        background-color: #908d8c;
+        background-color: $darkGray;
+        img {
+            width: 95%;
+        }
     }
     .imgbig {
         height: 250px;
         position: relative;
-        top: 75px;
+        top: 65px;
     }
     /*ADD HOVER/ACTIVE EFFECTS FOR .imgbig*/
 
@@ -204,7 +210,7 @@ p:last-child{
         width: 100%;
     }
     .btn:active {
-        background-color: #908d8c;
+        background-color: $darkGray;
         color: white;
         border: 3px solid white;
     }
@@ -212,7 +218,7 @@ p:last-child{
         text-align: center;
         float: left;
         width: 50%;
-        border-right: .5px solid #908d8c;
+        border-right: .5px solid $darkGray;
     }
     .signupbtn {
         text-align: center;
@@ -220,21 +226,20 @@ p:last-child{
         width: 50%;
     }
 
-    /* LOGIN PAGE */
-    .login-signup-header {
-        background-color: #33c0d4;
-    }
-    .loginlogo {
+    /* LOGIN PAGE/SIGNUP PAGE */
+    .login-logo-container {
         text-align: center;
-        width: 100%;
-        padding: 15px;
+    }
+    .imgmed {
+        height: 175px;
         position: relative;
-        top: 75px;
+        top: 55px;
+        text-align: center;
     }
     .logincontainer {
         width: 100%;
         height: 500px;
-        background-color: #33c0d4; 
+        background-color: $seafoam; 
     }
 
     .form {
@@ -249,40 +254,41 @@ p:last-child{
         margin: 0;
         float: left;
         padding: 0 10px;
+        .loginform-column {
+            width: 100%;
+        }
+        li {
+            margin: 0 0 10px 0;
+            padding: 0;
+            display: block;
+            position: relative;
+            .parsley-errors-list {
+                position: absolute;
+                top: 46px;
+                left: 0;
+                z-index: 1;
+                background: #FD8A71;
+                color: #ffffff;
+                padding: 0;
+                margin: 0;
+                border-radius: 10px;
+                width: 100%;
+                li {
+                    margin: 0;
+                    padding: 10px;
+                }
+            }
+        }
+        #pwdretrieve {
+            font-family: $font2;
+            font-weight: 400;
+            float: left;
+            color: $lightGray;
+            text-transform: uppercase;
+            font-size: .75rem;
+        }
     }
-    .form-column .loginform-column {
-        width: 100%;
-    }
-    .form-column li {
-        margin: 0 0 10px 0;
-        padding: 0;
-        display: block;
-        position: relative;
-    }
-    .form-column li .parsley-errors-list {
-        position: absolute;
-        top: 46px;
-        left: 0;
-        z-index: 1;
-        background: #FD8A71;
-        color: #ffffff;
-        padding: 0;
-        margin: 0;
-        border-radius: 10px;
-        width: 100%;
-    }
-    .form-column li .parsley-errors-list li {
-        margin: 0;
-        padding: 10px;
-    }
-    .form-column #pwdretrieve {
-        font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-        font-weight: 400;
-        float: left;
-        color: #d3d3d3;
-        text-transform: uppercase;
-        font-size: .75rem;
-    }
+
     .form label{
       display: none;
     }
@@ -295,8 +301,8 @@ p:last-child{
     .form input[type=text],
     .form input[type=password],
     .form textarea {
-      background: #d3d3d3;
-      font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+      background: white;
+      font-family: $font2;
       border: 0;
       padding: 6px 12px;
       color: black;
@@ -325,29 +331,56 @@ p:last-child{
     .submitbtn {
         text-align: center;
         background-color: white;
-        color: #908d8c;
+        color: $darkGray;
     }
 
 
     /* USER TYPE MENU DROPS DOWN ON CLICK OF .signupbtn */
+    .login-signup-header {
+        background-color: $darkGray;
+        width: 100%;
+        padding: 3px;
+        height: 75px;
+        text-align: center;
+    }
+    .imgsmall1 {
+        height: 50px;
+        margin: 10px 0 7px 0;
+    }
     .user-type-container {
-        width: 33.33%;
-    }
-
-    .usertypebtn {
-
-    }
-
-    #musician {
+        height: 600px;
+        width: 100%;
+        background-color: $seafoam;
         text-align: center;
-        float: left;
+        h3 {
+            color: white;
+            text-transform: uppercase;
+        }
     }
 
-    #band {
+    .usertypebtn-container {
+        position: relative;
+        top: 120px;
         text-align: center;
-        float: right;
+    }
+    
+    .musician-btn {
+        text-align: center;
+        width: 75%;
+        background-color: white;
+        position: relative;
+        left: 45px;
+        box-shadow: 0 3px 3px 0 $darkGray;
     }
 
+    .band-btn {
+        text-align: center;
+        width: 75%;
+        background-color: white;
+        position: relative;
+        left: 45px;
+        box-shadow: 0 3px 3px 0 $darkGray;
+    }
 
     /* MUSICIAN SIGNUP FORM DROPS DOWN ON CLICK OF #musician */
     .musiciancontainer {
@@ -427,6 +460,7 @@ p:last-child{
     }
 
 }
+
 
 /* ==========================================================================
    Helper classes
