--- a/finalproject/site/scss/main.scss
+++ b/finalproject/site/scss/main.scss
@@ -4,6 +4,7 @@ $font2: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $darkGray: #908d8c;
 $lightGray: #d3d3d3;
 $seafoam: #33c0d4;
+$lightGreen: #2ab01b;
 
 
 /*! HTML5 Boilerplate v5.0.0 | MIT License | http://h5bp.com/ */
@@ -133,8 +134,8 @@ h1 {
     font-family: $font1;
     font-weight: 400;
     margin: 0 0 10px 0;
-    font-size: 3rem;
-    color: white;
+    font-size: 2.25rem;
+    color: black;
 }
 h2 {
     font-family: $font1;
@@ -248,6 +249,12 @@ p:last-child{
         left: 35px;
         width: 600px;
         overflow: hidden;
+        .signupform {
+            background-color: $seafoam;
+            width: 50%;
+            position: relative;
+            top: 40px;
+        }
     }
     .form-column {
         width: 50%;
@@ -382,28 +389,16 @@ p:last-child{
         box-shadow: 0 3px 3px 0 $darkGray;
     }
 
-    /* MUSICIAN SIGNUP FORM DROPS DOWN ON CLICK OF #musician */
+    /* MUSICIAN SIGNUP FORM */
     .musiciancontainer {
-
+        height: 600px;
+        width: 100%;
+        background-color: $seafoam;
+        text-align: center;
     }
 
-    .user-column-container {
-
-    }
-    .column1 {
-        float: left;
-        width: 50%;
-    }
-    .signuptextsm {
-
-    }
     .dropdown {
-
-    }
-
-    .column2 {
-        float: right;
-        width: 50%;
+        
     }
 
 
@@ -430,13 +425,83 @@ p:last-child{
 
     }
 
-
     /* BROWSE VIEW */
-
     .browsecontainer {
+        width: 100%;
+        margin: 0;
+    }
+    .browselogo {
+        text-align: center;
+        width: 100%;
+        height: 50px;
+        background-color: $darkGray;
+        img {
+            height: 35px;
+            margin: 7px 0 0 0;
+        }
+    }
+    .browse-img-container {
+        width: 100%;
+        max-width: 100%;
+        text-align: center;
+        background-color: $lightGray;
+        height: 275px;
+        overflow: hidden;
+        margin: 0;
+        img {
+            max-height: 100%;
+            max-width: 100%;
+        }
+    }
+
+    .browsevitals {
+        width: 100%; 
+        background-color: white;
+        padding: 7px;
+        margin: 0;
+        h1 {
+            font-family: $font1;
+            margin: 0;
+        }
+        h3 {
+            font-weight: 400;
+            text-transform: uppercase;
+            margin: 0;
+        }
+        h4 {
+            color: $lightGreen;
+            margin: 7px 0 7px 0;
+        }
+    }
+    .viewprofile {
+        background-color: $seafoam;
+        width: 100%;
+        padding: 1px;
+        text-align: center;
+        margin: 0 0 0 0;
+        h2 {
+            font-family: $font1;
+            color: white;
+        }
+    }
+    .browsefooter {
+        background-color: $darkGray;
+        width: 100%;
+        padding: 1px;
+        text-align: center;
+        margin: 0 0 0 0;
+    }
+    .browseicon {
+        height: 45px;
+        padding: 5px;
+    }
+
+    /* PROFILE VIEW */
+
+    .profilecontainer {
 
     }
-    .browse-column1 {
+    .profile-column1 {
 
     }
     .infosmall1 {
@@ -446,7 +511,7 @@ p:last-child{
 
     }
 
-    .browse-column2 {
+    .profile-column2 {
 
     }
     .imgsmall {
